@@ -1,3 +1,8 @@
+Dec 06, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
+- added rtcw gametypes
+- changed master protocol for rtcw to 57
+- added a missing gettext call
+
 Nov 22, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
 - the ppc problem turned out to be a bug in filter.c, special thanks to Philipp
   Thomas for finding it!
